--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
 		"build": "tsc --build tsconfig.json",
 		"build:clean": "npm run build -- --clean",
 		"start:dev": "sudo TIER=dev docker-compose -f docker-compose.db.yml up -d && TIER=dev nodemon -w src --ext ts --exec ts-node src/index.ts && sudo TIER=dev docker-compose -f docker-compose.db.yml down",
+		"start:dev:nocompose": "TIER=dev nodemon -w src --ext ts --exec ts-node src/index.ts",
 		"typeorm": "TIER=dev node --require ts-node/register ./node_modules/typeorm/cli.js --config ormconfig.ts",
 		"compose:db:dev": "sudo TIER=dev docker-compose -f docker-compose.db.yml up",
 		"compose:db:test": "sudo TIER=test docker-compose -f docker-compose.db.yml up",
-		"test": "sudo TIER=test docker-compose -f docker-compose.db.yml up -d && TIER=test jest --coverage && sudo TIER=test docker-compose -f docker-compose.db.yml down"
+		"test": "sudo TIER=test docker-compose -f docker-compose.db.yml up -d && TIER=test jest --coverage && sudo TIER=test docker-compose -f docker-compose.db.yml down",
+		"test:nocompose": "TIER=test jest --coverage"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/faker": "^4.1.12",
 		"@types/jest": "^26.0.9",
 		"apollo-server": "^2.16.1",
 		"class-transformer": "^0.3.1",
 		"class-validator": "^0.12.2",
+		"faker": "^4.1.0",
 		"graphql": "^15.3.0",
 		"jest": "^26.2.2",
 		"pg": "^8.3.0",
